--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,12 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-on-rails": "6.8.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "lodash": "^4.17.4",
+    "react-dnd": "^2.2.4",
+    "react-dnd-html5-backend": "^2.2.4",
+    "react-input-range": "^1.0.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
   }
